<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timer</string>

    <!-- buttons -->
    <string name="reset">Reset</string>
    <string name="statistic">Statistic</string>
    <string name="stats">Stats</string>
    <string name="save">Save</string>
    <string name="removeAll">Remove all</string>
	
	<!-- labels -->
    <string name="labelRunDate">Date</string>
    <string name="labelRunDistance">Distance</string>
    <string name="labelRunDuration">Duration</string>
    <string name="labelTimePerLap">Time per lap</string>
    <string name="labelSpeedPerLap">Speed per lap</string>
    
    <!-- options -->
    <string name="settings">Settings</string>
    <string name="history">History</string>

    <!-- dialog messages -->

    <!-- dialog buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Settings -->
    <string name="lapsPerUnitOfDistanceSummary">Specify the number of laps per unit of distance e.g. mile, kilometer, etc</string>
    <string name="lapsPerUnitOfDistanceTitle">Laps Per Unit Of Distance</string>
    <string name="refreshRateSummary">Specify the number of times per second the timer view is refreshed. Use lower number to conserve the battery.</string>
    <string name="refreshRateTitle">Refresh Rate</string>
    
    <!-- messages -->
    <string name="msg_resetTimer">Reset timer?</string>
    <string name="msg_removeHistoryEntry">Remove selected history entry?</string>
    <string name="msg_removeLapsEntry">Remove selected lap?</string>
    <string name="msg_confirmExit">Current run is not saved. Exit anyway?</string>
    
    <string name="msg_removeAllHistoryEntries">Remove all history entries?</string>
    <string name="msg_timerNotActive">Timer is not active</string>
    <string name="msg_runSaved">Current run is saved</string>
    <string name="msg_runNotComplete">Current run is not complete</string>
    
</resources>