<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDataScroll"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	
		    <TextView
				android:id="@+id/labelRunDate"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/labelRunDate"
			/>
		    		
			<TextView
				android:id="@+id/textRunDate"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
		</LinearLayout>
	
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	
		    <TextView
				android:id="@+id/labelRunDistance"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/labelRunDistance"
			/>
		    		
			<TextView
				android:id="@+id/textRunDistance"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	
		    <TextView
				android:id="@+id/labelRunDuration"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/labelRunDuration"
			/>
		    		
			<TextView
				android:id="@+id/textRunDuration"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
		</LinearLayout>
	
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	
		    <TextView
				android:id="@+id/labelTimePerLap"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/labelTimePerLap"
			/>
		    		
			<TextView
				android:id="@+id/textLapTimeMinimum"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
			<TextView
				android:id="@+id/textLapTimeAverage"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
			<TextView
				android:id="@+id/textLapTimeMaximum"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
		</LinearLayout>
	
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
	
		    <TextView
				android:id="@+id/labelSpeedPerLap"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:text="@string/labelSpeedPerLap"
			/>
		    		
			<TextView
				android:id="@+id/textLapSpeedFastest"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
			<TextView
				android:id="@+id/textLapSpeedAverage"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
			<TextView
				android:id="@+id/textLapSpeedSlowest"
				style="@style/TimerTextNormal"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:singleLine="true"
			/>
		    
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>